--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <meta charset="utf-8">
-<title>inyo mural</title>
+<title>youch mural inyo mime</title>
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
 <meta name=theme-color content="indigo">
-<meta name=description content="inyo mussel spirit shakti magic marker pit">
-<link rel="stylesheet" href="dawn.css" media="(prefers-color-scheme:light)">
-<link rel="stylesheet" href="dusk.css" media="(prefers-color-scheme:dark)">
-<link rel="stylesheet" href="inyo.css">
+<meta name=description content="you(character source">
+<link rel="stylesheet" href="turnt.css" media=(color)>
+<link rel="stylesheet" href="youch.css" media="all">
 <link rel="license" href="UNLICENSE.txt">
-<link rel="icon" href="inyo.svg">
+<link rel="icon" href="sheen.svg">
 
-<nav class="dandelion">
-  <h1>inyo</h1>
-  <a href="/dub">dub</a>
-  <a href="/mussel">mussel</a>
-  <br><a href="/somagical">spirit bit</a>
-  <br><a href="/toucan">jungle tip</a>
-  <br><a href="/gerbera">sunday</a> <a href="/cuerpo">shakti</a>
-  <br><a href="/daisy">magic ☯</a>
-  <br><a href="/octopus">marker pit</a>
-</nav>
-
-<article class="dandelion hurricane">
-  <h2 class="tornado">
-    <dfn>inyo</dfn>
-    <a href="/coral">izza</a>
-    <a href="/spellbound">spirit</a>
-    <a href="https://octopus.boo">feeling</a>
-    <a href="/dream"><em>all</em>ways</a>
-  </h2>
-  <a href="/moshpit">trust</a>
-  inyo <a href="/#like">heartbeat</a>
-  <br>🧡 <a href="/eleo">dande<strong>lion</strong></a>
-</article>
+<main>
+  <header class="dandelion">
+    <h1>
+      <em>you</em><code>ch</code>
+    </h1>
+    <span>
+      <a href="/neptune">adaptive</a>
+      <a href="/eleo">character</a>
+      <a href="/inyo">welcome</a>
+    </span>
+  </header>
+  <article>
+    <h2>
+      fr<samp>èéêëēėęe</samp>
+      <b>do</b>
+      sueno
+    </h2>
+  </article>
+  <aside>
+    <span><a href="/tlfr">sleeper</a></span>
+    <span><a href="/taze">slipper</a></span>
+  </aside>
+  <aside>
+    <p>how wide is your <samp>0</samp>?    
+  </aside>
+  <menu>
+    <li><a href="/emux">s<code>li</code>t</a>
+    <li><a href="/inyo">stain</a>
+  </menu>
+  <footer>
+    <a href="/testing">you ≈ free</a>
+  </footer>
+</main>
